--- a/customer/templates/customer/dashboard.htm
+++ b/customer/templates/customer/dashboard.htm
@@ -13,6 +13,7 @@
                     <li class="noBig"><a href="/customer/order/">Orders</a></li>
                     <li class="noBig"><a href="/customer/doctor-appointment/">Doctor Appointments</a></li>
                     <li class="noBig"><a href="/customer/appointment/">Lab Appointments</a></li>
+                    <li class="noBig "><a href="/customer/completeappointment/">Completed Lab Appointments</a></li>
                 </ul>
                 <div class="dashboard-wrapper dashboard-user-profile noBig">
                     <div class="media noBig">
