--- a/customer/templates/customer/doctor-appointment-list.htm
+++ b/customer/templates/customer/doctor-appointment-list.htm
@@ -14,6 +14,7 @@
                     <li class="noBig"><a href="/customer/order/">Orders</a></li>
                     <li class="noBig"><a class="active" href="/customer/doctor-appointment/">Doctor Appointments</a></li>
                     <li class="noBig"><a href="/customer/appointment/">Lab Appointments</a></li>
+                    <li class="noBig "><a href="/customer/completeappointment/">Completed Lab Appointments</a></li>
                 </ul>
                 <div class="mt-10 noBig">
                     <nav class="navbar navbar-light bg-light text-center noBig">
