--- a/customer/templates/customer/order.htm
+++ b/customer/templates/customer/order.htm
@@ -13,6 +13,7 @@
                     <li><a class="active" href="/customer/order/">Orders</a></li>
                     <li><a href="/customer/doctor-appointment/">Doctor Appointments</a></li>
                     <li><a href="/customer/appointment/">Lab Appointments</a></li>
+                    <li class="noBig "><a href="/customer/completeappointment/">Completed Lab Appointments</a></li>
                 </ul>
                 <div style="margin-top: 20px;">
                     <nav class="navbar navbar-light bg-light text-center">
