--- a/templates/base.htm
+++ b/templates/base.htm
@@ -33,7 +33,6 @@
   <link rel="stylesheet" href={% static '/plugins/slick/slick.css' %}>
   <link rel="stylesheet" href={% static '/plugins/slick/slick-theme.css' %}>
 
- 
   <!---hand.css-->
   <link rel="stylesheet" href={% static '/css/hand.css' %}>
 
@@ -85,6 +84,10 @@
 
     <!-- Main Js File -->
     <script src={% static '/js/script.js' %}></script>
+
+    <!-- datetimepicker -->
+    <script src={% static '/plugins/datetimepicker/bootstrap/js/bootstrap.min.js' %}></script>
+    <script src={% static '/plugins/datetimepicker/js/bootstrap-datetimepicker.js' %}></script>
     
 
     
