--- a/templates/snippets/service-model.htm
+++ b/templates/snippets/service-model.htm
@@ -11,15 +11,15 @@
                 <div class="row">
                     <div class="col-md-8 col-sm-6 col-xs-12">
                         <div class="modal-image">
-                            <img class="img-responsive" src="/media/{{image.image}}" alt="product-img" />
+                            <!-- <img class="img-responsive" src="/media/{{image.image}}" alt="product-img" /> -->
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="product-short-details">
-                            <h2 class="product-title">{{image.product.title}}</h2>
-                            <p class="product-price">$ {{image.product.price}}</p>
+                            <h2 class="product-title">{{product.title}}</h2>
+                            <p class="product-price">${{product.price}}</p>
                             <p class="product-short-description">
-                                {{image.product.description}}
+                                {{product.description}}
                             </p>
                             <a href="/cart/add/{{image.product.id}}" class="btn btn-main">Add To Cart</a>
                             <a href="/product/shop/detail/{{image.product.id}}" class="btn btn-transparent">View Product Details</a>
