--- a/customer/templates/customer/lab-details.htm
+++ b/customer/templates/customer/lab-details.htm
@@ -1,4 +1,4 @@
-{% extends 'base.htm' %}
+  {% extends 'base.htm' %}
 {% load static %}
 
 {% block content %}
@@ -6,26 +6,25 @@
 {% include 'snippets/page-header.htm' %}
 
 {%include 'snippets/prescription.htm' %}
-<section class="user-dashboard page-wrapper">
+<section class="user-dashboard page-wrapper" style="padding: 0px" >
     <div class="container">
 
         <div class="dashboard-wrapper dashboard-user-profile">
             <div class="col-xs-12 col-md-4 text-center">
                 <img class="img-responsive mt-20" src="/media/{{lab_img.image}}" alt="{{lab_img.description}}">
                     <!-- prescription Doctor -->   
-                    <span class="li" ><a href="#!" class="btn btn-main btn-small btn-round-full mt-40" data-target="#MySecondmodal" data-toggle="modal" id="float-l"><i class="tf-ion-ios-upload-outline"></i> upload prescription</a></button>                 
+                    <!-- <span class="btn" ><a href="/service/appointment/" class="btn btn-main btn-small btn-round-full mt-20 ml-85" data-target="#" data-toggle="" id=""><i class="tf-ion-ios-upload-outline"></i> Book appointment</a></button> -->
             </div>
                 <div class="media-body">
-                    <h3 class="font-weight-bold text-uppercase">{{lab.lab_name}}</h3>
-                    <p class="text-info mt-10">{{lab.business_name}}</p>
-                    <p class="mt-30">{{lab.description}}</p>
+                    <h3 class="font-weight-bold text-uppercase">{{labs.lab_name}}</h3>
+                    <p class="text-info mt-10">{{labs.business_name}}</p>
+                    <p class="mt-30">{{labs.description}}</p>
                     <ul class="user-profile-list">
-                        <li><span>Full Name:</span>{{lab.full_name}}</li>
-                        <li><span>services:</span>{{lab.services}}</li>
-                        <li><span>Email:</span>{{lab.email}}</li>
-                        <li><span>Phone:</span>{{lab.contact_number}}</li>
-                        <li><span>Address:</span>{{lab.address}}</li>
-                        <li><span>No. of Branches:</span>{{lab.branches}}</li>
+                        <li><span>Full Name:</span>{{labs.full_name}}</li>
+                        <li><span>Email:</span>{{labs.email}}</li>
+                        <li><span>Phone:</span>{{labs.contact_number}}</li>
+                        <li><span>Address:</span>{{labs.address}}</li>
+                        <li><span>No. of Branches:</span>{{labs.branches}}</li>
                     </ul>
                 </div>
             </div>
@@ -33,34 +32,35 @@
             
         <div class="products">
             <div class="container">
-                <h3>Products</h3>
+                <h3>Available Services</h3>
                 <div class="row">
-                    {% for image in products %}
-                        <div class="col-md-4">
-                            <div class="product-item">
-                                <div class="product-thumb">
-                                    <img class="img-responsive" src="/media/{{image.image}}" alt={{image.description}} />
-                                    <div class="preview-meta">
-                                        <ul>
-                                            <li>
-												<span  data-toggle="modal" data-target="#product-modal_{{ forloop.counter0 }}">
-													<i class="tf-ion-ios-search-strong"></i>
-												</span>
-											</li>
-                                            <li>
-                                                <a href="/cart/add/{{image.product.id}}"><i class="tf-ion-android-cart"></i></a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="product-content">
-                                    <h4><a href="/product/shop/detail/{{image.product.id}}">{{image.product.title}}</a></h4>
-                                    <p class="price">$ {{image.product.price}}</p>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
-
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Services-Test Type</th>
+                                    <th>Specialty Areas</th>                                      
+                                    <th> Appointment time</th> 
+                                    <th style="width: 35%;">Description</th>
+                                    <th>Cost</th>
+                                    <th>Result(Days)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for service in services %}
+                                <tr>
+                                    <td><a href="/service/detail/{{service.id}}">{{service.title}}</a></td>
+                                    <td>{{service.service_type}}</td>
+                                    <td>{{service.appointment_date}}</td>
+                                    <td>{{service.description}}</td>
+                                    <td>${{service.price}}</td>
+                                    <td style="padding-left: 50px;">{{service.duration}}</td> 
+                                    <td><a class="btn btn-default" href="/service/appointment/{{service.id}}/">Book Appointment</a></td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div><!--end of product-->>
@@ -69,7 +69,7 @@
 </section>
 
 {% for service in services %}		
-{% include 'snippets/lab-model.htm' %}
+
 {% endfor %}
 
 {% include 'snippets/copyright-footer.htm'%}
