--- a/customer/templates/customer/profile-details.htm
+++ b/customer/templates/customer/profile-details.htm
@@ -14,6 +14,7 @@
                     <li class="noBig"><a href="/customer/order/">Orders</a></li>
                     <li class="noBig"><a class="active" href="/customer/profile-details/">Profile Details</a></li>
                     <li class="noBig"><a href="/customer/appointment/">Lab Appointments</a></li>
+                    <li class="noBig "><a class="active" href="/customer/completeappointment/">Completed Lab Appointments</a></li>
                 </ul>
                 <div class="dashboard-wrapper dashboard-user-profile noBig">
                     <div class="media noBig">
