--- a/lab/templates/lab/profile-details.htm
+++ b/lab/templates/lab/profile-details.htm
@@ -13,13 +13,13 @@
                     <li><a href="/lab/dashboard/">Dashboard</a></li>
                     <li><a href="/lab/appointment/">Appointments</a></li>
                     <li><a class="active" href="/lab/profile-details/">Profile Details</a></li>
-                    <li><a href="/service/list/">Service Details</a></li>
+                    <!-- <li><a href="/service/list/">Service Details</a></li> -->
                 </ul>
                 <div class="dashboard-wrapper dashboard-user-profile">
                     <div class="media">
                         <div class="pull-left text-center" href="#!">
                             <img class="media-object user-img" src="/media/{{lab_img.image}}" alt="Profile image of {{lab.lab_name}}">
-                            <a class="btn btn-main mt-20" data-target="#MyProfileModal" data-toggle="modal">Edit <i class="tf-ion-edit"></i></a>
+                            <a href="/lab/labupdate/{{lab.id}}" class="btn btn-main mt-20" > Edit <i class="tf-ion-edit"></i></a>
                         </div>
                         <div class="media-body">
                             <ul class="user-profile-list">
@@ -50,48 +50,5 @@
 
 {% include 'snippets/footer2.htm'%}
 
-<!-- .modal -->
-<div class="modal fade" id="MyProfileModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">×</button> 
-                <h4 class="modal-title">
-                    Edit your profile
-                </h4>                                                             
-                <hr>
-                <div class="media dashboard-wrapper">
-                    <div class="text-center" href="#!">
-                        <img class="media-object user-img" id="profile" src="/media/{{lab_img.image}}"  alt="Profile image of {{lab.lab_name}}">
-                        <a href="#x" class="btn btn-transparent mt-20">Change Image</a>
-                    </div>
-                <dl class="dl-horizontal details-list">
-                    <dt class="mt-10">Full Name:</dt>
-                    <dd><input type="text" class="form-control"  placeholder="hari lal yadhab"></dd>
-                    <dt class="mt-10">Pharmacy Name:</dt>
-                    <dd><input type="text" class="form-control"  placeholder="epharmacy"></dd>
-                    <dt class="mt-10">Email:</dt>
-                    <dd><input type="email" class="form-control"  placeholder="hari.yadhab1234@gmail.com"></dd>
-                    <dt class="mt-10">Address:</dt>
-                    <dd><input type="text" class="form-control"  placeholder="balkumari"></dd>
-                    <dt class="mt-10">Contact No:</dt>
-                    <dd><input type="text" class="form-control"  placeholder="9803678422"></dd>
-                    <dt class="mt-10">Birth of date:</dt>
-                    <dd><input type="text" class="form-control datepicker-test"  placeholder="07/18/1988"></dd>
-                    <dt>Registered Name:</dt>
-                    <dd>{{lab.business_name}}</dd>
-                    <dt>PAN NO</dt>
-                    <dd>{{lab.pan_number}}</dd>
-                    <dt>VAT NO</dt>
-                    <dd>{{lab.vat_number}}</dd> 
-                </dl>
-            </div>                         
-            <div class="modal-footer">
-                <button class="btn-css btn btn-primary">Update</button>
-                <button type="button" class="btn-css btn btn-default" data-dismiss="modal">Close</button>                               
-            </div>
-        </div> 
-    </div>                                                                      
-</div>  
 {% endblock content %}
 
